--- a/homework07/index.html
+++ b/homework07/index.html
@@ -108,11 +108,12 @@
                     <div class="like_items">
                         <div class="like_item">
                             <img src="../homework07/img/pictures/Mask Group.png" alt="girl">
+                            <img src="../homework07/img/icons/" alt="">
                             <h4>Women's black vest Gucci</h4>
                             <p>This is a wonderful black vest, which is well suited for parties and also great…</p>
                             <div class="shop">
                                 <div class="price">$ 715</div>
-                                <button type="button">Shop now</button>
+                                <button type="button" class="pink_button">Shop now</button>
                             </div>
                         </div>
                         <div class="like_item">
@@ -133,13 +134,14 @@
                                 <button type="button">Shop now</button>
                             </div>
                         </div>
-                        <div class="like_item">
+                        <div class=" like_item">
                             <img src="../homework07/img/pictures/Mask Group.png" alt="girl">
                             <h4>Women's black vest Gucci</h4>
-                            <p>This is a wonderful black vest, which is well suited for parties and also great…</p>
+                            <p>This is a wonderful black vest, which is well suited for parties and also great…
+                            </p>
                             <div class="shop">
                                 <div class="price">$ 715</div>
-                                <button type="button">Shop now</button>
+                                <button type="button" class="pink_button">Shop now</button>
                             </div>
                         </div>
                         <div class="like_item">
@@ -158,6 +160,28 @@
                             <div class="shop">
                                 <div class="price">$ 715</div>
                                 <button type="button">Shop now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contact">
+                <div class="container">
+                    <h2>Contacts</h2>
+                    <div class="map_container">
+                        <img src="../homework07/img/pictures/contacts.png" alt="map">
+                        <div class="contact_container">
+                            <div class="contact_item">
+                                <img src="../homework07/img/icons/iconoir_phone.svg" alt="phone">
+                                <p>+38 094 345 21 21</p>
+                            </div>
+                            <div class="contact_item">
+                                <img src="../homework07/img/icons/location-outline.svg" alt="lokation">
+                                <p>Adress</p>
+                            </div>
+                            <div class="contact_item">
+                                <img src="../homework07/img/icons/ci_mail.svg" alt="mail">
+                                <p>Email</p>
                             </div>
                         </div>
                     </div>
