--- a/homework07/index.html
+++ b/homework07/index.html
@@ -188,7 +188,11 @@
                 </div>
             </section>
         </main>
-        <footer class="footer">3</footer>
+        <footer class="footer">
+            <div class="container">
+
+            </div>
+        </footer>
     </div>
 </body>
 
