--- a/homework07/index.html
+++ b/homework07/index.html
@@ -190,7 +190,39 @@
         </main>
         <footer class="footer">
             <div class="container">
-
+                <div class="footer_head">
+                    <div>
+                        <h4 class="logo">Lady shop</h4>
+                        <p>Fashion is a popular
+                            aesthetic expression at a particular time, place and in a specific context, especially in
+                            clothing, footwear, lifestyle, accessories, makeup.</p>
+                    </div>
+                    <div>
+                        <h4>Hot links</h4>
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Shop</a></li>
+                            <li><a href="">Blog</a></li>
+                            <li><a href="">Contacts</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h4>More info</h4>
+                        <ul>
+                            <li><a href="">Hot it works</a></li>
+                            <li><a href="">About us</a></li>
+                            <li><a href="">Decline rules</a></li>
+                            <li><a href="">Terms & Conditions</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h4>Customer care</h4>
+                        <ul>
+                            <li><a href="">FAQ</a></li>
+                            <li><a href="">Discout system</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
