--- a/homework07/index.html
+++ b/homework07/index.html
@@ -223,6 +223,19 @@
                         </ul>
                     </div>
                 </div>
+
+            </div>
+            <div class="footer_bot_container">
+                <div class="container">
+                    <div class="footer_bot">
+                        <div class="copyright">© Lady shop all riths reserved</div>
+                        <div class="social_header">
+                            <a href=""><img src="../homework07/img/icons/twitter_icn_1.svg" alt="twitter"></a>
+                            <a href=""><img src="../homework07/img/icons/instagram_icn _1.svg" alt="insta"></a>
+                            <a href=""><img src="../homework07/img/icons/facebook_icn_1.svg" alt="facebook"></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
