--- a/homework09/index.html
+++ b/homework09/index.html
@@ -65,10 +65,18 @@
                         <a href=""><img src="../homework09/img/Google Play.png" alt="Google"></a>
                     </div>
                 </div>
+                <img class="head_img" src="../homework09/img/head_img.png" alt="head">
             </div>
         </header>
         <main class="main">
-            <div class="container">2</div>
+            <section class="first_section">
+                <div class="container">
+                    <div class="first">
+                        <div class="dirst_video"></div>
+                        <div class="first_text"></div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container">3</div>
