--- a/homework09/index.html
+++ b/homework09/index.html
@@ -72,7 +72,7 @@
             <section class="first_section">
                 <div class="container">
                     <div class="first">
-                        <div class="dirst_video"></div>
+                        <div class="first_video"></div>
                         <div class="first_text"></div>
                     </div>
                 </div>
