--- a/homework09/index.html
+++ b/homework09/index.html
@@ -387,6 +387,66 @@
                     </div>
                 </div>
             </section>
+            <section class="fourth">
+                <div class="users">
+                    <h2>What Our Users Say</h2>
+                    <div class="users_items">
+                        <div class="user_item">
+                            <div class="user_info">
+                                <img src="../homework09/img/noah.png" alt="noah">
+                                <h4>Noah Jackson</h4>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12"
+                                    fill="none">
+                                    <path
+                                        d="M15 1.42062C14.4422 1.66154 13.8478 1.82123 13.2281 1.89877C13.8656 1.524 14.3522 0.935077 14.5809 0.225231C13.9866 0.574154 13.3303 0.820615 12.6309 0.958154C12.0666 0.366462 11.2622 0 10.3847 0C8.68219 0 7.31156 1.36062 7.31156 3.02862C7.31156 3.26862 7.33219 3.49938 7.38281 3.71908C4.82625 3.59631 2.56406 2.38985 1.04437 0.552C0.779062 1.00523 0.623438 1.524 0.623438 2.08246C0.623438 3.13108 1.17188 4.06062 1.98937 4.59877C1.49531 4.58954 1.01063 4.44831 0.6 4.22585C0.6 4.23508 0.6 4.24708 0.6 4.25908C0.6 5.73046 1.66594 6.95262 3.06375 7.23415C2.81344 7.30154 2.54063 7.33385 2.2575 7.33385C2.06063 7.33385 1.86187 7.32277 1.67531 7.28215C2.07375 8.48123 3.20438 9.36277 4.54875 9.39138C3.5025 10.1972 2.17406 10.6828 0.735938 10.6828C0.48375 10.6828 0.241875 10.6717 0 10.6412C1.36219 11.5062 2.97656 12 4.7175 12C10.3763 12 13.47 7.38462 13.47 3.384C13.47 3.25015 13.4653 3.12092 13.4587 2.99262C14.0691 2.56615 14.5819 2.03354 15 1.42062Z"
+                                        fill="#03A9F4" />
+                                </svg>
+                            </div>
+                            <p>I use this app every day and it's a great way to keep up to date with what's going on in
+                                football. It's a shame it won't rotate into landscape mode like its main competitor</p>
+                        </div>
+                        <div class="user_item">
+                            <div class="user_info">
+                                <img src="../homework09/img/darren.png" alt="darren">
+                                <h4>Darren Wilson</h4>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12"
+                                    fill="none">
+                                    <path
+                                        d="M15 1.42062C14.4422 1.66154 13.8478 1.82123 13.2281 1.89877C13.8656 1.524 14.3522 0.935077 14.5809 0.225231C13.9866 0.574154 13.3303 0.820615 12.6309 0.958154C12.0666 0.366462 11.2622 0 10.3847 0C8.68219 0 7.31156 1.36062 7.31156 3.02862C7.31156 3.26862 7.33219 3.49938 7.38281 3.71908C4.82625 3.59631 2.56406 2.38985 1.04437 0.552C0.779062 1.00523 0.623438 1.524 0.623438 2.08246C0.623438 3.13108 1.17188 4.06062 1.98937 4.59877C1.49531 4.58954 1.01063 4.44831 0.6 4.22585C0.6 4.23508 0.6 4.24708 0.6 4.25908C0.6 5.73046 1.66594 6.95262 3.06375 7.23415C2.81344 7.30154 2.54063 7.33385 2.2575 7.33385C2.06063 7.33385 1.86187 7.32277 1.67531 7.28215C2.07375 8.48123 3.20438 9.36277 4.54875 9.39138C3.5025 10.1972 2.17406 10.6828 0.735938 10.6828C0.48375 10.6828 0.241875 10.6717 0 10.6412C1.36219 11.5062 2.97656 12 4.7175 12C10.3763 12 13.47 7.38462 13.47 3.384C13.47 3.25015 13.4653 3.12092 13.4587 2.99262C14.0691 2.56615 14.5819 2.03354 15 1.42062Z"
+                                        fill="#03A9F4" />
+                                </svg>
+                            </div>
+                            <p>Good for scores and commentary but the team lineups have stopped working. </p>
+                        </div>
+                        <div class="user_item">
+                            <div class="user_info">
+                                <img src="../homework09/img/michael.png" alt="michael">
+                                <h4>Michael Akinuli</h4>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12"
+                                    fill="none">
+                                    <path
+                                        d="M15 1.42062C14.4422 1.66154 13.8478 1.82123 13.2281 1.89877C13.8656 1.524 14.3522 0.935077 14.5809 0.225231C13.9866 0.574154 13.3303 0.820615 12.6309 0.958154C12.0666 0.366462 11.2622 0 10.3847 0C8.68219 0 7.31156 1.36062 7.31156 3.02862C7.31156 3.26862 7.33219 3.49938 7.38281 3.71908C4.82625 3.59631 2.56406 2.38985 1.04437 0.552C0.779062 1.00523 0.623438 1.524 0.623438 2.08246C0.623438 3.13108 1.17188 4.06062 1.98937 4.59877C1.49531 4.58954 1.01063 4.44831 0.6 4.22585C0.6 4.23508 0.6 4.24708 0.6 4.25908C0.6 5.73046 1.66594 6.95262 3.06375 7.23415C2.81344 7.30154 2.54063 7.33385 2.2575 7.33385C2.06063 7.33385 1.86187 7.32277 1.67531 7.28215C2.07375 8.48123 3.20438 9.36277 4.54875 9.39138C3.5025 10.1972 2.17406 10.6828 0.735938 10.6828C0.48375 10.6828 0.241875 10.6717 0 10.6412C1.36219 11.5062 2.97656 12 4.7175 12C10.3763 12 13.47 7.38462 13.47 3.384C13.47 3.25015 13.4653 3.12092 13.4587 2.99262C14.0691 2.56615 14.5819 2.03354 15 1.42062Z"
+                                        fill="#03A9F4" />
+                                </svg>
+                            </div>
+                            <p>Good for watching the goals and great for highlights instead of waiting till 10:30 before
+                                you can watch highlights on March of the day also no need of sky go</p>
+                        </div>
+                    </div>
+                    <div class="dots">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="143" height="11" viewBox="0 0 143 11"
+                            fill="none">
+                            <circle cx="5.5" cy="5.5" r="5.5" fill="#828282" />
+                            <circle cx="27.5" cy="5.5" r="5.5" fill="#979595" />
+                            <circle cx="49.5" cy="5.5" r="5.5" fill="#B2B0B0" />
+                            <circle cx="71.5" cy="5.5" r="5.5" fill="#CDCBCB" />
+                            <circle cx="93.5" cy="5.5" r="5.5" fill="#E2E1E1" />
+                            <circle cx="115.5" cy="5.5" r="5.5" fill="#EEEEEE" />
+                            <circle cx="137.5" cy="5.5" r="5.5" fill="#F7F7F7" />
+                        </svg>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container">3</div>
