--- a/homework06/index.html
+++ b/homework06/index.html
@@ -13,13 +13,13 @@
         <header class="header">
             <div class="container">
                 <nav class="nav">
-                    <img src="../homework06/img/Logo.svg" alt="logo">
+                    <a href="#"><img src="../homework06/img/Logo.svg" alt="logo"></a>
 
                     <ul class="menu_items">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="">Features</a></li>
-                        <li><a href="">Signup</a></li>
+                        <li class="menu_item"><a href="#">About</a></li>
+                        <li class="menu_item"><a href="#">Help</a></li>
+                        <li class="menu_item"><a href="">Features</a></li>
+                        <li class="menu_item"><a href="">Signup</a></li>
                     </ul>
 
                     <a href="#" class="request">Request Demo <svg xmlns="http://www.w3.org/2000/svg" width="22"
@@ -32,11 +32,11 @@
                     </a>
                 </nav>
                 <div class="text_header">
-                    <h1>Save your data storage here.</h1>
-                    <p>Data Warehouse is a data storage area that has been
+                    <h1 class="text_header_title">Save your data storage here.</h1>
+                    <p class="text_header_text">Data Warehouse is a data storage area that has been
                         tested for security, so you can store your data here
                         safely but not be afraid of being stolen by others.</p>
-                    <a href="#">Learn more</a>
+                    <a class="text_header_a" href="#">Learn more</a>
                     <img class="header_img" src="../homework06/img/image1 1.png" alt="img">
                 </div>
 
@@ -47,10 +47,11 @@
                 <section class="storage">
                     <img src="../homework06/img/image2.png" alt="Image2">
                     <div class="storage_text">
-                        <h2>We are a high-level
+                        <h2 class="storage_text_title">We are a high-level
                             data
                             storage bank</h2>
-                        <p>The place to store various data that you can access at any time through the internet and
+                        <p class="storage_text_text">The place to store various data that you can access at any time
+                            through the internet and
                             where you can carry it.
                             This very flexible storage area has a high level of security. To enter into your own data
                             you must enter the password that you created when you registered in this Data Warehouse.
@@ -58,7 +59,7 @@
                     </div>
                 </section>
                 <section class="features">
-                    <h2>Features</h2>
+                    <h2 class="features_title">Features</h2>
                     <div class="text_features">Some of the features and advantages that we provide for those of you who
                         store data in this Data
                         Warehouse.</div>
@@ -66,66 +67,68 @@
                         <div class="search features_rows">
                             <img class="rows_img" src="../homework06/img/image3 1.png" alt="img3">
                             <div class="text_row">
-                                <h3>Search Data</h3>
-                                <p>Don’t worry if your data is very large, the Data Warehoue provides a search engine,
+                                <h3 class="text_row_title">Search Data</h3>
+                                <p class="text_row_text">Don’t worry if your data is very large, the Data Warehoue
+                                    provides a search engine,
                                     which is useful for making it easier to find data effectively saving time.</p>
                                 <div class="link"><a href="#">Learn more </a>
-                                    <img src="../homework06/img/arrowr.svg" alt="arrow">
+                                    <img class="link_img" src="../homework06/img/arrowr.svg" alt="arrow">
                                 </div>
                             </div>
                         </div>
                         <div class="hours features_rows">
                             <img class="rows_img" src="../homework06/img/image4.png" alt="img4">
                             <div class="text_row">
-                                <h3>24 Hours Access</h3>
-                                <p>Access is given 24 hours a full morning to night and
+                                <h3 class="text_row_title">24 Hours Access</h3>
+                                <p class="text_row_text">Access is given 24 hours a full morning to night and
                                     meet again in the morning, giving you comfort when
                                     you need data when urgent.</p>
                                 <div class="link"><a href="#">Learn more </a>
-                                    <img src="../homework06/img/arrowr.svg" alt="arrow">
+                                    <img class="link_img" src="../homework06/img/arrowr.svg" alt="arrow">
                                 </div>
                             </div>
                         </div>
                         <div class="print features_rows">
                             <img class="rows_img" src="../homework06/img/image5 1.png" alt="img5">
                             <div class="text_row">
-                                <h3>Print Out</h3>
-                                <p>Print out service gives you convenience if someday
+                                <h3 class="text_row_title">Print Out</h3>
+                                <p class="text_row_text">Print out service gives you convenience if someday
                                     you need print data, just edit it all and just print it.</p>
                                 <div class="link"><a href="#">Learn more </a>
-                                    <img src="../homework06/img/arrowr.svg" alt="arrow">
+                                    <img class="link_img" src="../homework06/img/arrowr.svg" alt="arrow">
                                 </div>
                             </div>
                         </div>
                         <div class="security features_rows">
                             <img class="rows_img" src="../homework06/img/image6 1.png" alt="img6">
                             <div class="text_row">
-                                <h3>Security Code</h3>
-                                <p>Data Security is one of our best facilities. Allows for your files
+                                <h3 class="text_row_title">Security Code</h3>
+                                <p class="text_row_text">Data Security is one of our best facilities. Allows for your
+                                    files
                                     to be safer. The file can be secured with a code or password that
                                     you created, so only you can open the file.</p>
                                 <div class="link"><a href="#">Learn more </a>
-                                    <img src="../homework06/img/arrowr.svg" alt="arrow">
+                                    <img class="rows_img" src="../homework06/img/arrowr.svg" alt="arrow">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </section>
                 <section class="testimonials">
-                    <h3>Testimonials</h3>
+                    <h3 class="testimonials_title">Testimonials</h3>
                     <div class="fang">
                         <img src="../homework06/img/Ellipse 76.png" alt="photo">
                         <div class="text_testimols">
-                            <h4>John Fang </h4>
-                            <a href="http://wordfaang.com">wordfaang.com</a>
-                            <p>Suspendisse ultrices at diam lectus nullam.
+                            <h4 class="text_testimols_title">John Fang </h4>
+                            <a class="text_testimols_a" href="http://wordfaang.com">wordfaang.com</a>
+                            <p class="text_testimols_text">Suspendisse ultrices at diam lectus nullam.
                                 Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
                                 laoreet nulla.</p>
                         </div>
 
                     </div>
                     <div class="controls">
-                        <a href=""><img src="../homework06/img/slide.svg" alt="slide"></a>
+                        <a class="controls_a" href=""><img src="../homework06/img/slide.svg" alt="slide"></a>
                         <div class="arrows">
                             <a href="#"><img class="arrow_control" src="../homework06/img/arrowl.svg" alt="arrowl"></a>
                             <a href="#"><img class="arrowr2" src="../homework06/img/arrowr2.svg" alt="arrowr"></a>
@@ -139,8 +142,8 @@
             <div class="container">
                 <div class="try">
                     <div class="text_try">
-                        <h3>Try for free!</h3>
-                        <p>Get limited 1 week free try our features!</p>
+                        <h3 class="text_try_title">Try for free!</h3>
+                        <p class="text_try_text">Get limited 1 week free try our features!</p>
                     </div>
                     <div class="buttons">
                         <a href="#" class="learn">Learn more</a>
@@ -152,7 +155,7 @@
                     <div class="warehouse_data">
                         <div class="warehouse_data_head">
                             <img src="../homework06/img/Logo.svg" alt="logo">
-                            <h4 id="head_data">DataWarehouse</h4>
+                            <h4 class="warehouse_data_head_title" id="head_data">DataWarehouse</h4>
 
                         </div>
                         <div class="warehouse_text">Warehouse Society, 234 <br>
@@ -163,26 +166,26 @@
                             1-232-3434 (Main)</div>
                     </div>
                     <div class="about_data">
-                        <h4>About</h4>
+                        <h4 class="about_data_title">About</h4>
                         <ul>
-                            <li><a href="">Profile</a></li>
-                            <li><a href="">Features</a></li>
-                            <li><a href="">Careers</a></li>
-                            <li><a href="">DW News</a></li>
+                            <li class="about_data_title_item"><a href="">Profile</a></li>
+                            <li class="about_data_title_item"><a href="">Features</a></li>
+                            <li class="about_data_title_item"><a href="">Careers</a></li>
+                            <li class="about_data_title_item"><a href="">DW News</a></li>
                         </ul>
                     </div>
                     <div class="help_data">
-                        <h4>Help</h4>
+                        <h4 class="help_data_title">Help</h4>
                         <ul>
-                            <li><a href="#">Support</a></li>
-                            <li><a href="">Sign up</a></li>
-                            <li><a href="">Guide</a></li>
-                            <li><a href="">Reports</a> </li>
-                            <li><a href="">Q&A</a> </li>
+                            <li class="help_data_title_item"><a href="#">Support</a></li>
+                            <li class="help_data_title_item"><a href="">Sign up</a></li>
+                            <li class="help_data_title_item"><a href="">Guide</a></li>
+                            <li class="help_data_title_item"><a href="">Reports</a> </li>
+                            <li class="help_data_title_item"><a href="">Q&A</a> </li>
                         </ul>
                     </div>
                     <div class="social_data">
-                        <h4>Social Media</h4>
+                        <h4 class="social_data_title">Social Media</h4>
                         <a href="">
                             <svg xmlns="http://www.w3.org/2000/svg" width="178" height="50" viewBox="0 0 178 50"
                                 fill="none">
