--- a/homework07/index.html
+++ b/homework07/index.html
@@ -73,7 +73,7 @@
                         <div class="colection_item1">
                             <h3 class="colection_item1_title">Women Collection</h3>
                             <p class="colection_item1_text">Spring 2022</p>
-                            <a class="colection_item1_link" href="">Popular</a>
+                            <a class="colection_item1_link" href="#">Popular</a>
                         </div>
                         <div class="colection_item2">
                             <h3 class="colection_item2_title">Women Collection</h3>
@@ -91,22 +91,22 @@
                             <div class="col col1">
                                 <img class="colection_item5_img" src="../homework07/img/pictures/lv.png" width="156px"
                                     height="127px" alt="lv">
-                                <p class="colection_item5_text">Louis Vouiton</p>
+                                <p class="colection_item5_text col_text">Louis Vouiton</p>
                             </div>
                             <div class="col col2">
                                 <img class="colection_item5_img" src="../homework07/img/pictures/dg.png" width="100px"
                                     height="138px" alt="dg">
-                                <p class="colection_item5_text">Dolce&Gabbana</p>
+                                <p class="colection_item5_text col_text">Dolce&Gabbana</p>
                             </div>
                             <div class="col col3">
                                 <img class="colection_item5_img" src="../homework07/img/pictures/g.png" width="156px"
                                     height="92px" alt="g">
-                                <p class="colection_item5_text">Gucci</p>
+                                <p class="colection_item5_text col_text">Gucci</p>
                             </div>
                             <div class="col col4">
                                 <img class="colection_item5_img" src="../homework07/img/pictures/dn.png" width="94px"
                                     height="132px" alt="dn">
-                                <p class="colection_item5_text">Dries van Noten</p>
+                                <p class="colection_item5_text col_text">Dries van Noten</p>
                             </div>
                         </div>
                     </div>
@@ -201,16 +201,22 @@
                             <div class="contact_item">
                                 <img class="contact_item_img" src="../homework07/img/icons/iconoir_phone.svg"
                                     alt="phone">
-                                <p class="contact_item_phone">+38 094 345 21 21</p>
+                                <a class="contact_item_link" href="#">
+                                    <p class="contact_item_p">+38 094 345 21 21</p>
+                                </a>
                             </div>
                             <div class="contact_item">
                                 <img class="contact_item_img" src="../homework07/img/icons/location-outline.svg"
                                     alt="lokation">
-                                <p class="contact_item_adress">Adress</p>
+                                <a class="contact_item_link" href="#">
+                                    <p class="contact_item_p">Adress</p>
+                                </a>
                             </div>
                             <div class="contact_item">
                                 <img class="contact_item_img" src="../homework07/img/icons/ci_mail.svg" alt="mail">
-                                <p class="contact_item_mail">Email</p>
+                                <a class="contact_item_link" href="#">
+                                    <p class="contact_item_p">Email</p>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -229,26 +235,27 @@
                     <div class="footer_head_item">
                         <h4 class="footer_head_item_title">Hot links</h4>
                         <ul class="footer_head_item_links">
-                            <li><a class="footer_head_item_link" href="#">Home</a></li>
-                            <li><a class="footer_head_item_link" href="#">Shop</a></li>
-                            <li><a class="footer_head_item_link" href="#">Blog</a></li>
-                            <li><a class="footer_head_item_link" href="#">Contacts</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">Home</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">Shop</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">Blog</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">Contacts</a></li>
                         </ul>
                     </div>
                     <div class="footer_head_item">
                         <h4 class="footer_head_item_title">More info</h4>
                         <ul class="footer_head_item_links">
-                            <li><a class="footer_head_item_link" href="#">Hot it works</a></li>
-                            <li><a class="footer_head_item_link" href="#">About us</a></li>
-                            <li><a class="footer_head_item_link" href="#">Decline rules</a></li>
-                            <li><a class="footer_head_item_link" href="#">Terms & Conditions</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">Hot it works</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">About us</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">Decline rules</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">Terms & Conditions</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="footer_head_item">
                         <h4 class="footer_head_item_title">Customer care</h4>
                         <ul class="footer_head_item_links">
-                            <li><a class="footer_head_item_link" href="#">FAQ</a></li>
-                            <li><a class="footer_head_item_link" href="#">Discout system</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">FAQ</a></li>
+                            <li class="footer_li_item"><a class="footer_head_item_link" href="#">Discout system</a></li>
                         </ul>
                     </div>
                 </div>
