--- a/homework09/index.html
+++ b/homework09/index.html
@@ -64,8 +64,10 @@
                         information on your
                         team.</p>
                     <div class="head_button">
-                        <a class="head_button_a" href=""><img src="../homework09/img/Apple Store.png" alt="Apple"></a>
-                        <a class="head_button_a" href=""><img src="../homework09/img/Google Play.png" alt="Google"></a>
+                        <a class="head_button_a" href=""><img class="head_button_a_img"
+                                src="../homework09/img/Apple Store.png" alt="Apple"></a>
+                        <a class="head_button_a" href=""><img class="head_button_a_img"
+                                src="../homework09/img/Google Play.png" alt="Google"></a>
                     </div>
                 </div>
                 <img class="head_img" src="../homework09/img/head_img.png" alt="head">
@@ -296,10 +298,16 @@
 
                             <img class="phone" src="../homework09/img/phone.png" alt="phone">
                             <div class="phone_bot">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="49" viewBox="0 0 48 49"
-                                    fill="none">
+                                <svg class="phone_bot_svg" xmlns="http://www.w3.org/2000/svg" width="48" height="49"
+                                    viewBox="0 0 48 49" fill="none">
                                     <path
                                         d="M32.0342 6.46271L15.3675 6.44604C13.5342 6.44604 12.0342 7.94604 12.0342 9.77938V14.7794H15.3675V13.1127H32.0342V36.446H15.3675V34.7794H12.0342V39.7794C12.0342 41.6127 13.5342 43.1127 15.3675 43.1127H32.0342C33.8675 43.1127 35.3675 41.6127 35.3675 39.7794V9.77938C35.3675 7.94604 33.8675 6.46271 32.0342 6.46271ZM18.7008 29.7794H22.0342V18.1127H10.3675V21.446H16.3508L7.03418 30.7627L9.38418 33.1127L18.7008 23.796V29.7794Z"
+                                        fill="#333333" />
+                                </svg>
+                                <svg class="phone_bot_cart" xmlns="http://www.w3.org/2000/svg" width="49" height="49"
+                                    viewBox="0 0 34 34" fill="none">
+                                    <path
+                                        d="M10.3126 24.874C8.79845 24.874 7.57338 26.1156 7.57338 27.6331C7.57338 29.1507 8.79845 30.3923 10.3126 30.3923C11.8267 30.3923 13.0655 29.1507 13.0655 27.6331C13.0655 26.1156 11.8267 24.874 10.3126 24.874ZM2.05371 2.80078V5.55993H4.80666L9.76198 16.0309L7.90374 19.4109C7.6835 19.7971 7.55962 20.2524 7.55962 20.7353C7.55962 22.2528 8.79845 23.4944 10.3126 23.4944H26.8303V20.7353H10.8907C10.698 20.7353 10.5466 20.5835 10.5466 20.3904L10.5879 20.2248L11.8267 17.9761H22.0814C23.1138 17.9761 24.0223 17.4105 24.4903 16.5551L29.4181 7.6017C29.5282 7.40856 29.5832 7.17403 29.5832 6.93951C29.5832 6.18074 28.9638 5.55993 28.2068 5.55993H7.84868L6.55479 2.80078H2.05371ZM24.0773 24.874C22.5632 24.874 21.3381 26.1156 21.3381 27.6331C21.3381 29.1507 22.5632 30.3923 24.0773 30.3923C25.5915 30.3923 26.8303 29.1507 26.8303 27.6331C26.8303 26.1156 25.5915 24.874 24.0773 24.874Z"
                                         fill="#333333" />
                                 </svg>
                             </div>
