--- a/homework09/index.html
+++ b/homework09/index.html
@@ -667,8 +667,10 @@
                         Scores’ section. So, make sure you’re a top-flight football fan by downloading the Football
                         Score Centre now. It’s got all this:</p>
                     <div class="head_button">
-                        <a href="#"><img src="../homework09/img/Apple Store.png" alt="Apple"></a>
-                        <a href="#"><img src="../homework09/img/Google Play.png" alt="Google"></a>
+                        <a href="#"><img class="head_button_a_img" src="../homework09/img/Apple Store.png"
+                                alt="Apple"></a>
+                        <a href="#"><img class="head_button_a_img" src="../homework09/img/Google Play.png"
+                                alt="Google"></a>
                     </div>
                 </div>
             </section>
