--- a/homework09/index.html
+++ b/homework09/index.html
@@ -70,7 +70,7 @@
                                 src="../homework09/img/Google Play.png" alt="Google"></a>
                     </div>
                 </div>
-                <img class="head_img" src="../homework09/img/head_img.png" alt="head">
+                <img class="head_img" src="../homework09/img/head_img.png" " alt=" head">
             </div>
         </header>
         <main class="main">
