--- a/homework09/index.html
+++ b/homework09/index.html
@@ -70,7 +70,7 @@
                                 src="../homework09/img/Google Play.png" alt="Google"></a>
                     </div>
                 </div>
-                <img class="head_img" src="../homework09/img/head_img.png" " alt=" head">
+                <img class="head_img" src="../homework09/img/head_img.png" alt=" head">
             </div>
         </header>
         <main class="main">
@@ -658,7 +658,9 @@
                 </div>
             </section>
             <section class="six">
-                <img class="six_img" src="../homework09/img/phone_footer.png" alt="phone">
+                <img class="six_img" src="../homework09/img/phone_footer.png"
+                    srcset="../homework09/img/phone_footer_320.png 400w, ../homework09/img/phone_footer_640.png 720w"
+                    alt="phone">
                 <div class="six_right">
                     <h3 class="six_right_title">Get Up Close With Your Team</h3>
                     <p class="six_right_text">If you’re interested in the scores of more than one team (it’s OK, we
