--- a/homework07/index.html
+++ b/homework07/index.html
@@ -201,21 +201,21 @@
                             <div class="contact_item">
                                 <img class="contact_item_img" src="../homework07/img/icons/iconoir_phone.svg"
                                     alt="phone">
-                                <a class="contact_item_link" href="#">
-                                    <p class="contact_item_p">+38 094 345 21 21</p>
+                                <a class="contact_item_link contact_item_p" href="tel:+3806666666">
+                                    +38 094 345 21 21
                                 </a>
                             </div>
                             <div class="contact_item">
                                 <img class="contact_item_img" src="../homework07/img/icons/location-outline.svg"
                                     alt="lokation">
-                                <a class="contact_item_link" href="#">
-                                    <p class="contact_item_p">Adress</p>
+                                <a class="contact_item_link contact_item_p" href="#">
+                                    Adress
                                 </a>
                             </div>
                             <div class="contact_item">
                                 <img class="contact_item_img" src="../homework07/img/icons/ci_mail.svg" alt="mail">
-                                <a class="contact_item_link" href="#">
-                                    <p class="contact_item_p">Email</p>
+                                <a class="contact_item_link contact_item_p" href="mailto:yuriiwebblack@gmail.com">
+                                    Email
                                 </a>
                             </div>
                         </div>
