--- a/homework07/index.html
+++ b/homework07/index.html
@@ -266,12 +266,46 @@
                     <div class="footer_bot">
                         <div class="copyright">© Lady shop all riths reserved</div>
                         <div class="social_header">
-                            <a class="social_header_link" href="#"><img src="../homework07/img/icons/twitter_icn_1.svg"
-                                    alt="twitter"></a>
-                            <a class="social_header_link" href="#"><img
-                                    src="../homework07/img/icons/instagram_icn _1.svg" alt="insta"></a>
-                            <a class="social_header_link" href="#"><img src="../homework07/img/icons/facebook_icn_1.svg"
-                                    alt="facebook"></a>
+                            <a class="social_header_link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="18"
+                                    height="14" viewBox="0 0 18 14" fill="none">
+                                    <g clip-path="url(#clip0_1_224)">
+                                        <path
+                                            d="M18.1017 1.65738C17.4324 1.93846 16.7191 2.12476 15.9755 2.21522C16.7405 1.77799 17.3244 1.09092 17.5989 0.262769C16.8856 0.669845 16.0981 0.95738 15.2589 1.11784C14.5816 0.427538 13.6164 0 12.5634 0C10.5204 0 8.87563 1.58738 8.87563 3.53338C8.87563 3.81338 8.90038 4.08261 8.96114 4.33891C5.89325 4.19568 3.17862 2.78815 1.35499 0.643999C1.03662 1.17276 0.849868 1.77799 0.849868 2.42953C0.849868 3.65291 1.50799 4.73737 2.48899 5.36522C1.89612 5.35445 1.31449 5.18968 0.821743 4.93014C0.821743 4.94091 0.821743 4.95491 0.821743 4.96891C0.821743 6.68552 2.10087 8.11137 3.77825 8.43983C3.47787 8.51844 3.1505 8.55614 2.81075 8.55614C2.57449 8.55614 2.33599 8.54321 2.11212 8.49583C2.59024 9.89478 3.94701 10.9232 5.56025 10.9566C4.30475 11.8968 2.71062 12.4632 0.984868 12.4632C0.682243 12.4632 0.391996 12.4503 0.101746 12.4148C1.73637 13.4238 3.67362 14 5.76275 14C12.5532 14 16.2657 8.61537 16.2657 3.94799C16.2657 3.79184 16.2601 3.64107 16.2522 3.49138C16.9846 2.99384 17.6 2.37245 18.1017 1.65738Z"
+                                            fill="#1B2437" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_1_224">
+                                            <rect width="18" height="14" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg></a>
+                            <a class="social_header_link" href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                    fill="none">
+                                    <g clip-path="url(#clip0_1_219)">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M15.9594 4.70406C15.9218 3.85391 15.7843 3.26945 15.5874 2.763C15.3842 2.22542 15.0715 1.74412 14.6619 1.34402C14.2618 0.937688 13.7772 0.62195 13.2458 0.421958C12.7362 0.22502 12.1547 0.0875417 11.3045 0.0500588C10.4478 0.0094014 10.1758 0 8.00312 0C5.83039 0 5.55844 0.0094015 4.70496 0.0468845C3.85465 0.0843674 3.27007 0.221968 2.76365 0.418784C2.22584 0.62195 1.74446 0.934512 1.34427 1.34402C0.937864 1.74412 0.62219 2.22859 0.422039 2.75994C0.225063 3.26945 0.0875585 3.85074 0.0500684 4.70088C0.0094031 5.55738 0 5.82928 0 8.0016C0 10.1739 0.00940288 10.4458 0.0468931 11.2991C0.084383 12.1493 0.22201 12.7338 0.418986 13.2402C0.62219 13.7778 0.937864 14.259 1.34427 14.6591C1.74446 15.0655 2.22902 15.3812 2.76047 15.5812C3.27007 15.7782 3.85147 15.9156 4.7019 15.9531C5.55526 15.9907 5.82734 16 8.00008 16C10.1728 16 10.4447 15.9907 11.2982 15.9531C12.1486 15.9156 12.7331 15.7782 13.2395 15.5812C14.315 15.1655 15.1654 14.3154 15.5811 13.2402C15.778 12.7306 15.9156 12.1493 15.9531 11.2991C15.9906 10.4458 16 10.1739 16 8.0016C16 5.82928 15.9968 5.55738 15.9594 4.70406ZM14.5182 11.2366C14.4838 12.018 14.3525 12.44 14.2431 12.7213C13.9742 13.4183 13.4209 13.9715 12.7237 14.2404C12.4423 14.3498 12.0173 14.481 11.2387 14.5154C10.3946 14.553 10.1415 14.5622 8.00632 14.5622C5.87106 14.5622 5.61474 14.553 4.77371 14.5154C3.99215 14.481 3.57011 14.3498 3.28875 14.2404C2.94182 14.1122 2.62602 13.909 2.3697 13.6434C2.10397 13.3839 1.90077 13.0713 1.77254 12.7245C1.66312 12.4431 1.53185 12.018 1.49753 11.2398C1.45992 10.3958 1.45064 10.1426 1.45064 8.00784C1.45064 5.87299 1.45992 5.61671 1.49753 4.77597C1.53185 3.99457 1.66312 3.57261 1.77254 3.2913C1.90077 2.94431 2.10397 2.6287 2.37287 2.3723C2.63225 2.10662 2.94487 1.90346 3.29193 1.77538C3.57329 1.66598 3.9985 1.53473 4.77688 1.5003C5.62096 1.46282 5.87423 1.45342 8.00936 1.45342C10.1478 1.45342 10.4009 1.46282 11.2419 1.5003C12.0234 1.53473 12.4455 1.66598 12.7269 1.77538C13.0738 1.90346 13.3896 2.10662 13.6459 2.3723C13.9117 2.63174 14.1149 2.94431 14.2431 3.2913C14.3525 3.57261 14.4838 3.99762 14.5182 4.77597C14.5557 5.61989 14.5651 5.87299 14.5651 8.00784C14.5651 10.1426 14.5557 10.3927 14.5182 11.2366ZM7.94654 4.27744C5.76776 4.27744 4 6.04508 4 8.224C4 10.4029 5.76776 12.1705 7.94654 12.1705C10.1254 12.1705 11.893 10.4029 11.893 8.224C11.893 6.04508 10.1254 4.27744 7.94654 4.27744ZM7.94654 10.784C6.53306 10.784 5.38652 9.6376 5.38652 8.224C5.38652 6.81038 6.53306 5.66396 7.94654 5.66396C9.36016 5.66396 10.5066 6.81038 10.5066 8.224C10.5066 9.6376 9.36016 10.784 7.94654 10.784ZM12.0491 5.04267C12.558 5.04267 12.9706 4.63013 12.9706 4.12134C12.9706 3.61242 12.558 3.2 12.0491 3.2C11.5403 3.2 11.1278 3.61242 11.1278 4.12134C11.1278 4.63013 11.5403 5.04267 12.0491 5.04267Z"
+                                            fill="#1B2437" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_1_219">
+                                            <rect width="16" height="16" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg></a>
+                            <a class="social_header_link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                    height="18" viewBox="0 0 10 18" fill="none">
+                                    <g clip-path="url(#clip0_1_214)">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M6.78477 18V8.99896H9.62067L9.99649 5.89714H6.78477L6.78959 4.34465C6.78959 3.53565 6.87732 3.10217 8.20352 3.10217H9.97641V0H7.14011C3.73326 0 2.53413 1.50471 2.53413 4.03517V5.89749H0.410522V8.99931H2.53413V18H6.78477Z"
+                                            fill="#1B2437" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_1_214">
+                                            <rect width="10" height="18" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg></a>
                         </div>
                     </div>
                 </div>
