--- a/homework11/index.html
+++ b/homework11/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="row align-items-end">
+                    <div class="row justify-content-md-center">
                         <div class="col">
                             <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22"
                                 fill="none">
