--- a/homework11/index.html
+++ b/homework11/index.html
@@ -9,15 +9,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
     <title>Фреймворки</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container-sm">
-            <div class="row align-items-start">
-                <div class="col">
+            <div class="row align-items-center">
+                <div class="col align-items-center">
                     <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="105" height="30" viewBox="0 0 105 30"
                             fill="none">
@@ -26,7 +26,7 @@
                                 fill="#221F20" />
                         </svg></a>
                 </div>
-                <div class="col">
+                <div class="col align-items-center">
                     <div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
                         <div class="input-group">
                             <div class="input-group-prepend">
@@ -38,52 +38,43 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="row justify-content-md-center">
+                <div class="col align-items-center justify-content-center">
+                    <div class="row align-items-center justify-content-center">
                         <div class="col">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22"
-                                fill="none">
-                                <path
-                                    d="M22.1768 22H14.5175C14.1171 22 13.7666 21.6795 13.7666 21.3132V15.6816C13.7666 14.4912 12.7654 13.5754 11.4638 13.5754C10.1623 13.5754 9.16106 14.4912 9.16106 15.6816V21.3132C9.16106 21.6795 8.81064 22 8.41016 22H0.750907C0.350423 22 0 21.6795 0 21.3132V10.5536C0 10.3704 0.100121 10.1873 0.200242 10.0499L10.9632 0.206035C11.2636 -0.0686785 11.7141 -0.0686785 12.0145 0.206035L22.7775 10.0499C22.9778 10.2331 23.0779 10.5536 22.9277 10.7825C22.9277 10.8283 22.8776 10.8283 22.8776 10.8741V21.3132C22.9277 21.6795 22.5773 22 22.1768 22ZM15.2684 20.6264H21.4259V10.7367L11.5139 1.67118L1.50181 10.8283V20.6264H7.65925V15.6816C7.65925 13.7128 9.31125 12.2019 11.4638 12.2019C13.6164 12.2019 15.2684 13.7128 15.2684 15.6816V20.6264Z"
-                                    fill="#262626" />
-                            </svg>
+                            <a href="#"><i class="fa-solid fa-house"></i></a>
                         </div>
                         <div class="col">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="19" viewBox="0 0 22 19"
-                                fill="none">
-                                <path
-                                    d="M21.5131 0H0.460947C0.0399037 0 -0.147226 0.509019 0.133469 0.786666L7.61868 8.09803L10.1917 18.6486C10.2853 19.0651 10.8467 19.1113 11.0338 18.7874L21.9341 0.694117C22.1213 0.370196 21.8874 0 21.5131 0ZM2.75329 1.38823H18.4254L8.69468 6.7098C8.50755 6.80234 8.27363 6.75607 8.13329 6.61725L2.75329 1.38823ZM11.0338 16.1035L9.1625 8.42195C9.11572 8.23685 9.20928 8.00548 9.39641 7.91293L19.174 2.54509L11.0338 16.1035Z"
-                                    fill="#262626" />
-                            </svg>
+                            <a href=""><i class="fa-sharp fa-solid fa-paper-plane"></i></a>
                         </div>
                         <div class="col">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"
-                                fill="none">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M11 0C17.0851 0 22 4.91489 22 11C22 17.0851 17.0851 22 11 22C4.91489 22 0 17.0851 0 11C0 4.91489 4.91489 0 11 0ZM11 20.5957C16.2894 20.5957 20.5957 16.2894 20.5957 11C20.5957 5.71064 16.2894 1.40426 11 1.40426C5.71064 1.40426 1.40426 5.71064 1.40426 11C1.40426 16.2894 5.71064 20.5957 11 20.5957ZM8.94043 9.50213C9.08085 9.26808 9.26808 9.08085 9.50213 8.94043L16.4298 5.14894C16.5702 5.10213 16.7106 5.10213 16.8043 5.19574C16.8979 5.28936 16.9447 5.42979 16.8511 5.57021L13.0596 12.4979C12.9191 12.7319 12.7319 12.9191 12.4979 13.0596L5.57021 16.8511C5.42979 16.8979 5.28936 16.8979 5.19574 16.8043C5.10213 16.7106 5.05532 16.5702 5.14894 16.4298L8.94043 9.50213ZM11.8426 11.8426L13.8553 8.19149L10.2043 10.2043L11.8426 11.8426Z"
-                                    fill="#262626" />
-                            </svg>
+                            <a href="#"><i class="fa-regular fa-compass"></i></a>
                         </div>
                         <div class="col">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="19" viewBox="0 0 22 19"
-                                fill="none">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M15.8213 0C12.4979 0 11 2.4561 11 2.4561C11 2.4561 9.50213 0 6.17872 0C2.7617 0 0 2.96585 0 6.62683C0 10.2878 2.85532 12.3732 5.71064 14.8756C10.017 18.6756 10.2979 19 11 19C11.7021 19 11.983 18.6756 16.2894 14.8756C19.1915 12.3268 22 10.2415 22 6.62683C22 2.96585 19.2383 0 15.8213 0ZM15.3532 13.8098C12.8255 16.0341 11.4681 17.2854 11 17.5634C10.5319 17.239 8.84681 15.7561 6.64681 13.8098C4.07234 11.539 1.40426 9.63902 1.40426 6.58049C1.40426 3.70732 3.55745 1.3439 6.17872 1.3439C8.09787 1.3439 9.12766 2.27073 9.8766 3.29024C11.5617 5.65366 10.4383 5.65366 12.1234 3.29024C12.8723 2.27073 13.9021 1.3439 15.8213 1.3439C18.4426 1.3439 20.5957 3.70732 20.5957 6.58049C20.5957 9.68537 17.9277 11.5854 15.3532 13.8098Z"
-                                    fill="#262626" />
-                            </svg>
+                            <a href="#"><i class="fa-solid fa-heart"></i></a>
                         </div>
                         <div class="col">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"
-                                fill="none">
-                                <circle cx="11" cy="11" r="11" fill="#4094EF" />
-                            </svg>
+                            <a href="#"><i class="fa-solid fa-circle"></i></a>
                         </div>
                     </div>
                 </div>
 
 
             </div>
+        </div>
     </header>
+    <main class="main">
+        <div class="container-sm">
+            <div class="row justify-content-evenly">
+                <div class="col-4">
+                    <img src="../homework11/img/Ellipse 36.png" alt="circle">
+                </div>
+                <div class="col-4 d-flex justify-content-left ">
+                    <h2>Name</h2>
+                    <button type="button" class="btn btn-primary btn-sm">Fallow</button>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
 
@@ -91,6 +82,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4c3ddd653d.js" crossorigin="anonymous"></script>
 
 </body>
 
