--- a/homework11/index.html
+++ b/homework11/index.html
@@ -16,8 +16,8 @@
 <body>
     <header class="header">
         <div class="container-sm">
-            <div class="row align-items-center">
-                <div class="col align-items-center">
+            <div class="row row align-items-center justify-content-between py-3">
+                <div class="col-3 align-items-center">
                     <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="105" height="30" viewBox="0 0 105 30"
                             fill="none">
@@ -26,7 +26,7 @@
                                 fill="#221F20" />
                         </svg></a>
                 </div>
-                <div class="col align-items-center">
+                <div class="col-3 align-items-center">
                     <div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
                         <div class="input-group">
                             <div class="input-group-prepend">
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col align-items-center justify-content-center">
+                <div class="col-3 align-items-center justify-content-center">
                     <div class="row align-items-center justify-content-center">
                         <div class="col">
                             <a href="#"><i class="fa-solid fa-house"></i></a>
@@ -68,10 +68,57 @@
                 <div class="col-4">
                     <img src="../homework11/img/Ellipse 36.png" alt="circle">
                 </div>
-                <div class="col-4 d-flex justify-content-left ">
-                    <h2>Name</h2>
-                    <button type="button" class="btn btn-primary btn-sm">Fallow</button>
+
+                <div class="col-6 ">
+                    <div class="row">
+                        <div class="col d-flex align-items-center justify-content-left gap-3">
+                            <h2>Name</h2>
+                            <button type="button" class="btn btn-primary btn-sm">Fallow</button>
+                            <button type="button" class="btn btn-secondary btn-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="4" viewBox="0 0 8 4"
+                                    fill="none">
+                                    <path d="M4 4L0 0L8 6.05683e-07L4 4Z" fill="white" />
+                                </svg>
+                            </button>
+                            <button type="button" class="btn btn-outline-primary">...</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col d-flex gap-4">
+                            <p><b>79</b> posts</p>
+                            <p><b>379</b> followers</p>
+                            <p><b>179</b> following</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <p class="name_text"><b>Name</b></p>
+                    </div>
+                    <div class="col">
+                        <p class="name_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has
+                            been the industry's standard dummy text.</p>
+                    </div>
+                    <div class="col">
+                        <a href="#"> bit.ly/35Ce3mX</a>
+                    </div>
                 </div>
+            </div>
+            <div class="row align-items-center justify-content-start py-3">
+
+                <div class="col">
+                    <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
+                    <p>name</p>
+                </div>
+
+                <div class="col">
+                    <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
+                    <p>name</p>
+                </div>
+                <div class="col">
+                    <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
+                    <p>name</p>
+                </div>
+
             </div>
         </div>
     </main>
