--- a/homework11/index.html
+++ b/homework11/index.html
@@ -103,18 +103,18 @@
                     </div>
                 </div>
             </div>
-            <div class="row align-items-center justify-content-start py-3">
+            <div class="row align-items-center justify-content-start py-3 ml-3">
 
-                <div class="col">
+                <div class="col-1">
                     <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
                     <p>name</p>
                 </div>
 
-                <div class="col">
+                <div class="col-1">
                     <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
                     <p>name</p>
                 </div>
-                <div class="col">
+                <div class="col-1">
                     <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
                     <p>name</p>
                 </div>
