--- a/homework11/index.html
+++ b/homework11/index.html
@@ -103,22 +103,90 @@
                     </div>
                 </div>
             </div>
-            <div class="row align-items-center justify-content-start py-3 ml-3">
+            <div class="row align-items-center justify-content-start py-3 gap-4 text-center">
 
                 <div class="col-1">
-                    <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
-                    <p>name</p>
-                </div>
-
-                <div class="col-1">
-                    <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
+                    <div class="img">
+                        <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
+                    </div>
                     <p>name</p>
                 </div>
                 <div class="col-1">
-                    <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
+                    <div class="img">
+                        <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
+                    </div>
+                    <p>name</p>
+                </div>
+                <div class="col-1">
+                    <div class="img">
+                        <img src="../homework11/img/Ellipse 36.png" width="79px" alt="circle">
+                    </div>
                     <p>name</p>
                 </div>
 
+            </div>
+
+            <div class="row border-top align-items-center justify-content-center py-3">
+                <div class="col d-flex align-items-center justify-content-center gap-2">
+                    <div class="col-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" fill="none">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M10.6333 0H0.366667C0.171111 0 0 0.171111 0 0.366667V10.6333C0 10.8289 0.171111 11 0.366667 11H10.6333C10.8289 11 11 10.8289 11 10.6333V0.366667C11 0.171111 10.8289 0 10.6333 0ZM0.733333 0.733333H3.42222V3.42222H0.733333V0.733333ZM0.733333 4.15556H3.42222V6.84444H0.733333V4.15556ZM3.42222 10.2667H0.733333V7.57778H3.42222V10.2667ZM6.84444 10.2667H4.15556V7.57778H6.84444V10.2667ZM6.84444 6.84444H4.15556V4.15556H6.84444V6.84444ZM6.84444 3.42222H4.15556V0.733333H6.84444V3.42222ZM10.2667 10.2667H7.57778V7.57778H10.2667V10.2667ZM10.2667 6.84444H7.57778V4.15556H10.2667V6.84444ZM10.2667 3.42222H7.57778V0.733333H10.2667V3.42222Z"
+                                fill="#262626" />
+                        </svg>
+                        <a class="posts" href="#">POSTS</a>
+                    </div>
+
+                    <div class="col-1"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="11"
+                            viewBox="0 0 11 11" fill="none">
+                            <path
+                                d="M9.59575 1.18066H6.99787C6.88085 1.18066 6.76383 1.1339 6.67021 1.04038L5.73404 0.105207C5.59362 -0.0350691 5.38298 -0.0350691 5.24255 0.105207L4.30638 1.04038C4.21277 1.1339 4.09574 1.18066 3.97872 1.18066H1.40426C0.631915 1.18066 0 1.8119 0 2.58342V9.59724C0 10.3688 0.631915 11 1.40426 11H9.59575C10.3681 11 11 10.3688 11 9.59724V2.58342C11 1.8119 10.3681 1.18066 9.59575 1.18066ZM2.71489 10.2986C2.57447 10.2986 2.45745 10.1583 2.48085 10.0181C2.64468 9.26993 3.3 8.70882 4.07234 8.70882H6.88085C7.6766 8.70882 8.33191 9.26993 8.47234 10.0181C8.49574 10.1583 8.37872 10.2986 8.2383 10.2986H2.71489ZM10.2979 9.59724C10.2979 9.99469 9.99362 10.2986 9.59575 10.2986H9.45532C9.3383 10.2986 9.24468 10.2051 9.22128 10.0882C9.08085 8.91923 8.09787 8.00744 6.90426 8.00744H4.09574C2.90213 8.00744 1.89574 8.91923 1.77872 10.0882C1.75532 10.2051 1.6617 10.2986 1.54468 10.2986H1.40426C1.00638 10.2986 0.702128 9.99469 0.702128 9.59724V2.58342C0.702128 2.18597 1.00638 1.88204 1.40426 1.88204H4.00213C4.30638 1.88204 4.61064 1.76514 4.82128 1.53135L5.5 0.853347L6.17872 1.53135C6.38936 1.74176 6.69362 1.88204 6.99787 1.88204H9.59575C9.99362 1.88204 10.2979 2.18597 10.2979 2.58342V9.59724ZM5.5 2.81722C4.25957 2.81722 3.25319 3.82253 3.25319 5.06164C3.25319 6.30074 4.25957 7.30606 5.5 7.30606C6.74043 7.30606 7.74681 6.30074 7.74681 5.06164C7.74681 3.82253 6.74043 2.81722 5.5 2.81722ZM5.5 6.5813C4.65745 6.5813 3.95532 5.90329 3.95532 5.03826C3.95532 4.1966 4.63404 3.49522 5.5 3.49522C6.36596 3.49522 7.04468 4.17322 7.04468 5.03826C7.04468 5.87991 6.34255 6.5813 5.5 6.5813Z"
+                                fill="#8E8E8E" />
+                        </svg>
+                        <a class="tagged" href="#">TAGGED</a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row g-4 py-5">
+                <div class="col">
+                    <img src="../homework11/img/Rectangle 70.png" alt="rect">
+                </div>
+                <div class="col">
+                    <img src="../homework11/img/Rectangle 70.png" alt="rect">
+                </div>
+                <div class="col">
+                    <img src="../homework11/img/Rectangle 70.png" alt="rect">
+                </div>
+                <div class="col">
+                    <img src="../homework11/img/Rectangle 70.png" alt="rect">
+                </div>
+                <div class="col">
+                    <img src="../homework11/img/Rectangle 70.png" alt="rect">
+                </div>
+                <div class="col">
+                    <img src="../homework11/img/Rectangle 70.png" alt="rect">
+                </div>
+                <div class="col">
+                    <img src="../homework11/img/Rectangle 70.png" alt="rect">
+                </div>
+                <div class="col">
+                    <img src="../homework11/img/Rectangle 70.png" alt="rect">
+                </div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
+                <div class="col"><img src="../homework11/img/Rectangle 70.png" alt="rect"></div>
             </div>
         </div>
     </main>
